--- a/app/views/m.location.html
+++ b/app/views/m.location.html
@@ -10,9 +10,9 @@
 <div class="row no-margin-hr" style="margin-top:55px">
     <div class="col-sm-12 col-xs-12 no-padding-hr">
         <ul ng-repeat="location in locationsList" class="list-styles no-padding-hr">
-            <li class="m-custom-content-border m-list-align-left">
-                <span class="m-main-field" ng-click="dashboardAction(location)">{{location.display_name}}</span>
-                <a ng-show="location.mobile" href="tel:{{location.mobile}}" class="glyphicon glyphicon-earphone pull-right m-phoneNumber"></a>
+            <li class="m-custom-content-border m-list-align-left-right">
+                <span class="m-main-field" style="width:calc(100% - 45px);" ng-click="dashboardAction(location)">{{location.display_name}}</span>
+                <a class="pull-right m-phoneNumber" ng-show="location.mobile" href="tel:{{location.mobile}}"><img src="images/call-icon.png" /></a>
                 <span class="m-sub-field">{{location.mobile}}</span>
             </li>
         </ul>
