--- a/app/views/m.user.html
+++ b/app/views/m.user.html
@@ -10,9 +10,9 @@
 <div class="row no-margin-hr" style="margin-top:55px">
     <div class="col-sm-12 col-xs-12 no-padding-hr">
         <ul ng-repeat="user in users" class="list-styles no-padding-hr">
-            <li class="m-custom-content-border m-list-align-left">
-                <span class="m-main-field">{{user.username}}</span>
-                <a ng-show="user.mobile" href="tel:{{user.mobile}}" class="glyphicon glyphicon-earphone pull-right m-phoneNumber"></a>
+            <li class="m-custom-content-border m-list-align-left-right">
+                <span class="m-main-field" style="width:calc(100% - 45px);">{{user.username}}</span>
+                <a class="pull-right m-phoneNumber" ng-show="user.mobile" href="tel:{{user.mobile}}"><img src="images/call-icon.png" /></a>
                 <span class="m-sub-field">{{user.email}}{{user.mobile}}</span>
             </li>
         </ul>
