--- a/app/views/search.html
+++ b/app/views/search.html
@@ -12,11 +12,11 @@
         </div>
         <div class="col-md-12 no-padding-hr" style="margin-top:7px;">
             <ul class="custom-content list-styles no-padding-hr">
-                <li class="custom-content-border sub-listheightvalues actionsmenu" ng-repeat="item in searchdetails| orderBy: 'display_name'" ng-click="itemSearch(item.id, item.type, item.display_name, item.rootgroup_id)">
-                  <span>{{item.display_name}}</span>
+                <li class="custom-content-border sub-listheightvalues" ng-repeat="item in searchdetails| orderBy: 'display_name'" ng-click="itemSearch(item.id, item.type, item.display_name, item.rootgroup_id)">
+                    <span class="actionsmenu"><span>{{item.display_name}}</span></span>
                 </li>
             </ul>
-            <button class="button button-calm" style="width: 100%" ng-show="LoadMoreButton" ng-click="showMoreResults()">
+            <button class=" button button-calm " style="width: 100% " ng-show="LoadMoreButton " ng-click="showMoreResults() ">
                 Load More Results
                </button>
         </div>
